; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2412/extr_irq.c_s3c2412_irq_rtc_wake.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2412/extr_irq.c_s3c2412_irq_rtc_wake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i32)* }

@S3C2412_PWRCFG = common dso_local global i32 0, align 4
@S3C2412_PWRCFG_RTC_MASKIRQ = common dso_local global i64 0, align 8
@s3c_irq_chip = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @s3c2412_irq_rtc_wake to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c2412_irq_rtc_wake(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @S3C2412_PWRCFG, align 4
  %7 = call i64 @__raw_readl(i32 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i64, i64* @S3C2412_PWRCFG_RTC_MASKIRQ, align 8
  %12 = xor i64 %11, -1
  %13 = load i64, i64* %5, align 8
  %14 = and i64 %13, %12
  store i64 %14, i64* %5, align 8
  br label %19

15:                                               ; preds = %2
  %16 = load i64, i64* @S3C2412_PWRCFG_RTC_MASKIRQ, align 8
  %17 = load i64, i64* %5, align 8
  %18 = or i64 %17, %16
  store i64 %18, i64* %5, align 8
  br label %19

19:                                               ; preds = %15, %10
  %20 = load i64, i64* %5, align 8
  %21 = load i32, i32* @S3C2412_PWRCFG, align 4
  %22 = call i32 @__raw_writel(i64 %20, i32 %21)
  %23 = load i32 (i32, i32)*, i32 (i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s3c_irq_chip, i32 0, i32 0), align 8
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 %23(i32 %24, i32 %25)
  ret i32 %26
}

declare dso_local i64 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
